Another fix of z-index

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -340,7 +340,6 @@ body {
   border-radius: $border-radius;
   box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
   position: relative;
-  z-index: 99;
 
   .search-result-header {
     display: flex;
